--- a/WindowsSmartInk/Microsoft.MTC.SmartInk/Microsoft.MTC.SmartInk.csproj
+++ b/WindowsSmartInk/Microsoft.MTC.SmartInk/Microsoft.MTC.SmartInk.csproj
@@ -122,6 +122,9 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>11.0.2</Version>
     </PackageReference>
+    <PackageReference Include="NuGet.Packaging">
+      <Version>4.8.0</Version>
+    </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
