--- a/WindowsSmartInk/SmartInkLaboratory/SmartInkLaboratory.csproj
+++ b/WindowsSmartInk/SmartInkLaboratory/SmartInkLaboratory.csproj
@@ -93,6 +93,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AI\azureicons.cs" />
+    <Compile Include="AI\InkModel.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -114,9 +115,7 @@
     <Compile Include="Services\IIconMappingService.cs" />
     <Compile Include="Services\IImageService.cs" />
     <Compile Include="Services\IInkManifestManager.cs" />
-    <Compile Include="Services\IInkModelManager.cs" />
     <Compile Include="Services\InkManifestManager.cs" />
-    <Compile Include="Services\InkModelManager.cs" />
     <Compile Include="Services\IPredictionService.cs" />
     <Compile Include="Services\IProjectPackageMapper.cs" />
     <Compile Include="Services\IProjectService.cs" />
