--- a/WindowsSmartInk/Microsoft.MTC.SmartInk/Microsoft.MTC.SmartInk.csproj
+++ b/WindowsSmartInk/Microsoft.MTC.SmartInk/Microsoft.MTC.SmartInk.csproj
@@ -106,6 +106,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="InkModel.cs" />
     <Compile Include="IPackageStorageProvider.cs" />
     <Compile Include="LocalAppDataProvider.cs" />
     <Compile Include="PackageManager.cs" />
