--- a/WindowsSmartInk/Microsoft.MTC.SmartInk/Microsoft.MTC.SmartInk.csproj
+++ b/WindowsSmartInk/Microsoft.MTC.SmartInk/Microsoft.MTC.SmartInk.csproj
@@ -106,6 +106,8 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Extensions\InkStrokeCollectionExtensions.cs" />
+    <Compile Include="Extensions\RectExtenstion.cs" />
     <Compile Include="InkModel.cs" />
     <Compile Include="IPackageStorageProvider.cs" />
     <Compile Include="LocalAppDataProvider.cs" />
@@ -124,6 +126,12 @@
     </PackageReference>
     <PackageReference Include="NuGet.Packaging">
       <Version>4.8.0</Version>
+    </PackageReference>
+    <PackageReference Include="Win2D.uwp">
+      <Version>1.23.0</Version>
+    </PackageReference>
+    <PackageReference Include="WriteableBitmapEx">
+      <Version>1.5.1</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
