moved to IMediaPackage interface

--- a/WindowsSmartInk/Microsoft.MTC.SmartInk/Microsoft.MTC.SmartInk.csproj
+++ b/WindowsSmartInk/Microsoft.MTC.SmartInk/Microsoft.MTC.SmartInk.csproj
@@ -108,6 +108,7 @@
   <ItemGroup>
     <Compile Include="Extensions\InkStrokeCollectionExtensions.cs" />
     <Compile Include="Extensions\RectExtenstion.cs" />
+    <Compile Include="IMediaPackage.cs" />
     <Compile Include="InkModel.cs" />
     <Compile Include="IPackageStorageProvider.cs" />
     <Compile Include="ISmartInkPackage.cs" />
