--- a/WindowsSmartInk/SmartInkLaboratory/SmartInkLaboratory.csproj
+++ b/WindowsSmartInk/SmartInkLaboratory/SmartInkLaboratory.csproj
@@ -240,11 +240,11 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Cognitive.CustomVision.Prediction">
-      <Version>1.2.0</Version>
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.CustomVision.Prediction">
+      <Version>0.10.0-preview</Version>
     </PackageReference>
-    <PackageReference Include="Microsoft.Cognitive.CustomVision.Training">
-      <Version>1.2.0</Version>
+    <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.CustomVision.Training">
+      <Version>0.12.0-preview</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.7</Version>
