updated to use new ONNX 1.2 models

--- a/WindowsSmartInk/Microsoft.MTC.SmartInk/Microsoft.MTC.SmartInk.csproj
+++ b/WindowsSmartInk/Microsoft.MTC.SmartInk/Microsoft.MTC.SmartInk.csproj
@@ -111,7 +111,7 @@
     <Compile Include="Extensions\InkStrokeCollectionExtensions.cs" />
     <Compile Include="Extensions\RectExtenstion.cs" />
     <Compile Include="IMediaPackage.cs" />
-    <Compile Include="InkModel.cs" />
+    <Compile Include="SmartInkModel.cs" />
     <Compile Include="IPackageStorageProvider.cs" />
     <Compile Include="ISmartInkPackage.cs" />
     <Compile Include="LocalAppDataProvider.cs" />
