--- a/WindowsSmartInk/EBC_InkDemo/EBC_InkDemo.csproj
+++ b/WindowsSmartInk/EBC_InkDemo/EBC_InkDemo.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{DC56CF02-1EEC-4B5E-8B92-256C194A1228}</ProjectGuid>
+    <ProjectGuid>{768A2076-2ADA-4CCD-B132-00505584F698}</ProjectGuid>
     <OutputType>AppContainerExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SmartInkLaboratory</RootNamespace>
-    <AssemblyName>SmartInkLaboratory</AssemblyName>
+    <RootNamespace>EBC_InkDemo</RootNamespace>
+    <AssemblyName>EBC_InkDemo</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.17763.0</TargetPlatformVersion>
@@ -17,7 +17,7 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>SmartInkLaboratory_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>EBC_InkDemo_TemporaryKey.pfx</PackageCertificateKeyFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -96,90 +96,38 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Extensions\RectExtensions.cs" />
-    <Compile Include="MainPage.xaml.cs">
+    <Compile Include="ViewModels\MainViewModel.cs" />
+    <Compile Include="Views\MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\InkManifest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\AppStateService.cs" />
-    <Compile Include="Services\CustomVisionClassifierBaseService.cs" />
-    <Compile Include="Services\CustomVisionImageService.cs" />
-    <Compile Include="Services\CustomVisionPredictionService.cs" />
-    <Compile Include="Services\CustomVisionProjectService.cs" />
-    <Compile Include="Services\CustomVisionTagService.cs" />
-    <Compile Include="Services\CustomVisionTrainingService.cs" />
-    <Compile Include="Services\IAppStateService.cs" />
-    <Compile Include="Services\IClassifierService.cs" />
-    <Compile Include="Services\IImageService.cs" />
-    <Compile Include="Services\IInkManifestManager.cs" />
-    <Compile Include="Services\InkManifestManager.cs" />
-    <Compile Include="Services\IPredictionService.cs" />
-    <Compile Include="Services\IProjectPackageMapper.cs" />
-    <Compile Include="Services\IProjectService.cs" />
-    <Compile Include="Services\ITagService.cs" />
-    <Compile Include="Services\ITrainingFileService.cs" />
-    <Compile Include="Services\ITrainingService.cs" />
-    <Compile Include="Services\LocalProjectPackageMapper.cs" />
-    <Compile Include="Services\Platform\ISecureKeyService.cs" />
-    <Compile Include="Services\Platform\UWPSecureKeyService.cs" />
-    <Compile Include="Services\UX\DialogService.cs" />
-    <Compile Include="Services\UX\IDialogService.cs" />
-    <Compile Include="ViewModels\IconMapViewModel.cs" />
-    <Compile Include="ViewModels\IInkProcessor.cs" />
-    <Compile Include="ViewModels\ImageTagsViewModel.cs" />
     <Compile Include="ViewModels\Locator.cs" />
-    <Compile Include="ViewModels\MainViewModel.cs" />
-    <Compile Include="ViewModels\ManageViewModel.cs" />
-    <Compile Include="ViewModels\NewPackageViewModel.cs" />
-    <Compile Include="ViewModels\OpenPackageViewModel.cs" />
-    <Compile Include="ViewModels\PackageManagerViewModel.cs" />
-    <Compile Include="ViewModels\ProjectsViewModel.cs" />
-    <Compile Include="ViewModels\ResourceKeysViewModel.cs" />
-    <Compile Include="ViewModels\SmartInkPackageViewModel.cs" />
-    <Compile Include="ViewModels\TestViewModel.cs" />
-    <Compile Include="ViewModels\TrainViewModel.cs" />
-    <Compile Include="Views\Controls\SelectionList.cs" />
-    <Compile Include="Views\Dialogs\DialogKeys.cs" />
-    <Compile Include="Views\Dialogs\ManageProjectsDialog.xaml.cs">
-      <DependentUpon>ManageProjectsDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Dialogs\NewPackageDialog.xaml.cs">
-      <DependentUpon>NewPackageDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Dialogs\OpenPackageDialog.xaml.cs">
-      <DependentUpon>OpenPackageDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Dialogs\ResourceListDialog.xaml.cs">
-      <DependentUpon>ResourceListDialog.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Helpers\FlyoutHelpers.cs" />
-    <Compile Include="Views\ManageResourcesView.xaml.cs">
-      <DependentUpon>ManageResourcesView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UserControls\IconMapper.xaml.cs">
-      <DependentUpon>IconMapper.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UserControls\PackageView.xaml.cs">
-      <DependentUpon>PackageView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UserControls\TestView.xaml.cs">
-      <DependentUpon>TestView.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\UserControls\TrainingView.xaml.cs">
-      <DependentUpon>TrainingView.xaml</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <Content Include="AI\azureicons.onnx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <None Include="SmartInkLaboratory_TemporaryKey.pfx" />
+    <None Include="EBC_InkDemo_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\Images\no_icon.png" />
+    <Content Include="Assets\AzureArchitect\blob.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\AzureArchitect\iothub.jpg" />
+    <Content Include="Assets\AzureArchitect\sql.jpg" />
+    <Content Include="Assets\EESample\ammeter.jpg" />
+    <Content Include="Assets\EESample\capacitor.jpg" />
+    <Content Include="Assets\EESample\diode.jpg" />
+    <Content Include="Assets\EESample\ground.jpg" />
+    <Content Include="Assets\EESample\lamp.jpg" />
+    <Content Include="Assets\EESample\motor.jpg" />
+    <Content Include="Assets\EESample\resistor.jpg" />
+    <Content Include="Assets\EESample\switch.jpg" />
+    <Content Include="Assets\EESample\transformer.jpg" />
+    <Content Include="Assets\EESample\voltage.jpg" />
+    <Content Include="Assets\EESample\voltmeter.jpg" />
+    <Content Include="Assets\Pen-Icon.jpg" />
+    <Content Include="Assets\welcome.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -194,69 +142,32 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Themes\Generic.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\Dialogs\ManageProjectsDialog.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\Dialogs\NewPackageDialog.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\Dialogs\OpenPackageDialog.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\Dialogs\ResourceListDialog.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\ManageResourcesView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\UserControls\IconMapper.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\UserControls\PackageView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\UserControls\TestView.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Views\UserControls\TrainingView.xaml">
+    <Page Include="Views\MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.CustomVision.Prediction">
-      <Version>0.10.0-preview</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Azure.CognitiveServices.Vision.CustomVision.Training">
-      <Version>0.12.0-preview</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.0-preview1-26926-04</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Rest.ClientRuntime">
-      <Version>2.3.14</Version>
+      <Version>6.1.9</Version>
     </PackageReference>
     <PackageReference Include="MTC.Amp">
       <Version>1.0.2</Version>
     </PackageReference>
+    <PackageReference Include="MTC.SmartInk">
+      <Version>1.1.0</Version>
+    </PackageReference>
     <PackageReference Include="MvvmLight">
       <Version>5.4.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>11.0.2</Version>
+    </PackageReference>
+    <PackageReference Include="SmartInk.AzureArchitect">
+      <Version>1.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="SmartInk.EESample">
+      <Version>1.0.1</Version>
     </PackageReference>
     <PackageReference Include="Win2D.uwp">
       <Version>1.23.0</Version>
@@ -264,12 +175,6 @@
     <PackageReference Include="WriteableBitmapEx">
       <Version>1.5.1</Version>
     </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Microsoft.MTC.SmartInk\Microsoft.MTC.SmartInk.csproj">
-      <Project>{e610f4b6-d7bc-434a-a439-4d7ce6043e84}</Project>
-      <Name>Microsoft.MTC.SmartInk</Name>
-    </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
