--- a/WindowsSmartInk/nuget.config
+++ b/WindowsSmartInk/nuget.config
@@ -3,5 +3,7 @@
   <packageSources>
     <add key="nuget" value="https://api.nuget.org/v3/index.json" />
   </packageSources>
- 
+ <activePackageSource>
+    <add key="All" value="(Aggregate source)" />
+  </activePackageSource>
 </configuration>
